--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <!-- <script src="js/tut4.js"></script> -->
 <!-- <script src="js/tut5.js"></script> -->
 <!-- <script src="js/tut6.js"></script> -->
-<script src="js/tut7.js"></script>
-<script src="js/tut7.js"></script>
+<!-- <script src="js/tut7.js"></script> -->
+<script src="js/tut8.js"></script>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
