--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 <!-- <script src="js/tut7.js"></script> -->
 <!-- <script src="js/tut8.js"></script> -->
 <!-- <script src="js/tut9.js"></script> -->
-<script src="js/tut10.js"></script>
+<!-- <script src="js/tut10.js"></script> -->
+<!-- <script src="js/tut11.js"></script> -->
+<script src="js/tut12.js"></script>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
