--- a/web.html
+++ b/web.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container">
         <h1 class="heading">Welcome to DOM</h1>
-        <div class="child" id="main">Child 1</div>
+        <div class="child red good" id="myfirst">Child 1</div>
         <div class="child"><a href="facebook.com"></a>Child 2</div>
         <div class="child">Child 3</div>
         <div class="child">Child 4</div>
@@ -20,6 +20,8 @@
         <input type="text" name="name">
         <input type="submit" value="submit">
     </form>
-    <script src="js/tut12.js"></script>
+    <!-- <script src="js/tut12.js"></script> -->
+    <!-- <script src="js/tut14.js"></script> -->
+    <script src="js/tut15.js"></script>
 </body>
 </html>
