--- a/web.html
+++ b/web.html
@@ -6,9 +6,17 @@
     <title>Document</title>
 </head>
 <body>
+   
     <div class="container">
         <h1 class="heading">Welcome to DOM</h1>
-        <div class="child red good" id="myfirst">Child 1</div>
+        <div class="child red good" id="myfirst">
+            <ul>
+                <li>HEy</li>
+                <li>i am</li>
+                <li>Amit</li>
+                <li>Vishwakarma</li>
+            </ul>
+        </div>
         <div class="child"><a href="facebook.com"></a>Child 2</div>
         <div class="child">Child 3</div>
         <div class="child">Child 4</div>
@@ -20,6 +28,13 @@
         <input type="text" name="name">
         <input type="submit" value="submit">
     </form>
+    <br><br>
+    <div class="second">
+        <div class="no">This is dummy Div1</div>
+        <div class="no">This is dummy Div2</div>
+        <div class="no">This is dummy Div3</div>
+        <div class="no">This is dummy Div4</div>
+    </div>
     <!-- <script src="js/tut12.js"></script> -->
     <!-- <script src="js/tut14.js"></script> -->
     <script src="js/tut15.js"></script>
