--- a/web.html
+++ b/web.html
@@ -10,11 +10,11 @@
     <div class="container">
         <h1 class="heading">Welcome to DOM</h1>
         <div class="child red good" id="myfirst">
-            <ul>
-                <li>HEy</li>
+            <ul class="this" id="myul">
+                <li id="fui">HEy</li>
                 <li>i am</li>
                 <li>Amit</li>
-                <li>Vishwakarma</li>
+                <li id="lui">Vishwakarma</li>
             </ul>
         </div>
         <div class="child"><a href="facebook.com"></a>Child 2</div>
@@ -29,14 +29,15 @@
         <input type="submit" value="submit">
     </form>
     <br><br>
-    <div class="second">
-        <div class="no">This is dummy Div1</div>
+    <div class="second" id="second">
+        <div class="no" id="sec">This is dummy Div1</div>
         <div class="no">This is dummy Div2</div>
         <div class="no">This is dummy Div3</div>
         <div class="no">This is dummy Div4</div>
     </div>
     <!-- <script src="js/tut12.js"></script> -->
     <!-- <script src="js/tut14.js"></script> -->
-    <script src="js/tut15.js"></script>
+    <!-- <script src="js/tut15.js"></script> -->
+    <script src="js/tut16.js"></script>
 </body>
 </html>
