--- a/web.html
+++ b/web.html
@@ -42,7 +42,10 @@
     <!-- <script src="js/tut15.js"></script> -->
     <!-- <script src="js/tut16.js"></script> -->
     <!-- <script src="js/tut17.js"></script> -->
-    <script src="js/tut18.js"></script>
+    <!-- <script src="js/tut18.js"></script> -->
+    <!-- <script src="js/tut19.js"></script> -->
+    <!-- <script src="js/tut20.js"></script> -->
+    <script src="js/tut21.js"></script>
 </body>
 
 </html>
