--- a/Main-JavaScript/web.html
+++ b/Main-JavaScript/web.html
@@ -45,7 +45,10 @@
     <!-- <script src="js/tut18.js"></script> -->
     <!-- <script src="js/tut19.js"></script> -->
     <!-- <script src="js/tut20.js"></script> -->
-    <script src="js/tut21.js"></script>
+    <!-- <script src="js/tut21.js"></script> -->
+    <!-- <script src="js/tut22.js"></script> -->
+    <!-- <script src="js/tut23.js"></script> -->
+    <script src="js/tut24.js"></script>
 </body>
 
 </html>
