--- a/Main-JavaScript/index.html
+++ b/Main-JavaScript/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1 id="demo">Hello I am Amit Vishwakarma</h1>
+    <h1 id="demo">Hello I am Amit Vishwakarma And i am a web developer</h1>
     <button class="btn btn-warning" onclick="myFunction()">Warning</button>
 </body>
 
