--- a/Main-JavaScript/index.html
+++ b/Main-JavaScript/index.html
@@ -27,6 +27,13 @@
 <!-- <script src="js/tut12.js"></script> -->
 
 
+
+<!-- Github :--
+
+git remote set-url origin https://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@github.com/Amitsyko/JavaScript -->
+
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
