--- a/Main-JavaScript/web.html
+++ b/Main-JavaScript/web.html
@@ -47,8 +47,9 @@
     <!-- <script src="js/tut20.js"></script> -->
     <!-- <script src="js/tut21.js"></script> -->
     <!-- <script src="js/tut22.js"></script> -->
-    <script src="js/tut23.js"></script>
+    <!-- <script src="js/tut23.js"></script> -->
     <!-- <script src="js/tut24.js"></script> -->
+    <script src="js/tut25.js"></script>
 </body>
 
 </html>
