--- a/Main-JavaScript/web.html
+++ b/Main-JavaScript/web.html
@@ -49,7 +49,9 @@
     <!-- <script src="js/tut22.js"></script> -->
     <!-- <script src="js/tut23.js"></script> -->
     <!-- <script src="js/tut24.js"></script> -->
-    <script src="js/tut25.js"></script>
+    <!-- <script src="js/tut25.js"></script> -->
+    <!-- <script src="js/tut26.js"></script> -->
+    <script src="js/tut27.js"></script>
 </body>
 
 </html>
