--- a/Main-JavaScript/web.html
+++ b/Main-JavaScript/web.html
@@ -51,7 +51,9 @@
     <!-- <script src="js/tut24.js"></script> -->
     <!-- <script src="js/tut25.js"></script> -->
     <!-- <script src="js/tut26.js"></script> -->
-    <script src="js/tut27.js"></script>
+    <!-- <script src="js/tut27.js"></script> -->
+    <!-- <script src="js/tut28.js"></script> -->
+    <script src="js/tut29.js"></script>
 </body>
 
 </html>
