--- a/Magic-Notes/magic.html
+++ b/Magic-Notes/magic.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6C oIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -26,7 +27,8 @@
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
-                    <input class="form-control me-2" id="srchBtn" type="search" placeholder="Search" aria-label="Search">
+                    <input class="form-control me-2" id="srchBtn" type="search" placeholder="Search"
+                        aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
             </div>
@@ -38,12 +40,17 @@
         <div class="card mb-5">
             <div class="card-body">
                 <h3>Welcome to Magic Notes</h3>
+                <br>
+                <strong>Add Title</strong>
+                <input type="email" class="form-control title" id="addTitle" aria-describedby="title">
+                <br>
+                <strong>Add Notes</strong>
                 <textarea class="form-control my-3" placeholder="Leave a comment here" id="addTxt"></textarea>
                 <button class="btn btn-success" id="addBtn">Add Notes</button>
             </div>
         </div>
         <hr>
-         <h3>Your Notes </h3>
+        <h3>Your Notes </h3>
         <hr>
         <div id="notes" class="row"> </div>
     </div>
