--- a/projects/wheather-apk/index.html
+++ b/projects/wheather-apk/index.html
@@ -19,14 +19,14 @@
                     <input type="text" name="text" id="text" placeholder="Enter your city name">
                 </div>
                 <div class="input">
-                    <img src="images/search.png">
+                    <button><img src="images/search.png"></button>
                 </div>
             </div>
 
             <div class="detail">
 
                 <div class="dp-season">
-                    <img src="images/clear.png">
+                    <img src="images/clear.png" class="weather-icon">
                     <h1 class="temp">22°c</h1>
                     <h2 class="font city">India</h2>
                 </div>
@@ -53,10 +53,14 @@
 
     <script>
         const apiKey = "b75f96937bcbe4370ae5d8e03b4b49a1";
-        const apiUrl = "https://api.openweathermap.org/data/2.5/weather?&units=metric&q=Bangalore";
+        const apiUrl = "https://api.openweathermap.org/data/2.5/weather?&units=metric&q=";
 
-        async function checkWeather() {
-            const response = await fetch(apiUrl + `&appid=${apiKey}`);
+        const inputBox = document.querySelector(".input input");
+        const inputBtn = document.querySelector(".input button");
+        const weatherIcon = document.querySelector(".weather-icon");
+
+        async function checkWeather(city) {
+            const response = await fetch(apiUrl + city + `&appid=${apiKey}`);
             var data = await response.json();
             console.log(data);
 
@@ -64,17 +68,46 @@
             document.querySelector(".temp").innerHTML = data.main.temp + "°c";
             document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
             document.querySelector(".speed").innerHTML = data.wind.speed + "Km/Hrs";
+
+            if (data.weather[0].main == "Clear") {
+                weatherIcon.src = 'images/clear.png';
+            }
+            else if (data.weather[0].main == "Clouds") {
+                weatherIcon.src = 'images/clouds.png';
+            }
+            else if (data.weather[0].main == "Drizzle") {
+                weatherIcon.src = 'images/drizzle.png';
+            }
+            else if (data.weather[0].main == "Humidity") {
+                weatherIcon.src = 'images/humidity.png';
+            }
+            else if (data.weather[0].main == "Mist") {
+                weatherIcon.src = 'images/mist.png';
+            }
+            else if (data.weather[0].main == "Rain") {
+                weatherIcon.src = 'images/rain.png';
+            }
+            else if (data.weather[0].main == "Snow") {
+                weatherIcon.src = 'images/snow.png';
+            }
+            else if (data.weather[0].main == "Wind") {
+                weatherIcon.src = 'images/wind.png';
+            }           
+            
+            document.querySelector(".detail").style = "display:block";
         }
 
-        checkWeather();
+
+        inputBtn.addEventListener("click", () => {
+            checkWeather(inputBox.value);
+        })
+
 
 
     </script>
 </body>
 
 </html>
-
-
 
 
 
