--- a/projects/wheather-apk/index.html
+++ b/projects/wheather-apk/index.html
@@ -111,4 +111,4 @@
 
 
 
-<!-- https://api.openweathermap.org/data/2.5/weather?q=Bangalore&appid=b75f96937bcbe4370ae5d8e03b4b49a1&units=metric -->
+git remote set-url origin https://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@github.com/Amitsyko/JavaScript
