--- a/Main-JavaScript/web.html
+++ b/Main-JavaScript/web.html
@@ -55,7 +55,9 @@
     <!-- <script src="js/tut28.js"></script> -->
     <!-- <script src="js/tut29.js"></script> -->
     <!-- <script src="js/tut30.js"></script> -->
-    <script src="js/tut31.js"></script>
+    <!-- <script src="js/tut31.js"></script> -->
+    <!-- <script src="js/tut32.js"></script> -->
+    <script src="js/tut33.js"></script>
 </body>
 
 </html>
