--- a/Main-JavaScript/web.html
+++ b/Main-JavaScript/web.html
@@ -57,7 +57,8 @@
     <!-- <script src="js/tut30.js"></script> -->
     <!-- <script src="js/tut31.js"></script> -->
     <!-- <script src="js/tut32.js"></script> -->
-    <script src="js/tut33.js"></script>
+    <!-- <script src="js/tut33.js"></script> -->
+    <script src="js/tut34.js"></script>
 </body>
 
 </html>
