--- a/Main-JavaScript/news.html
+++ b/Main-JavaScript/news.html
@@ -52,7 +52,7 @@
         </div>
       </nav>
 
-      <div class="container">
+      <div class="container mb-5">
         <h1 class="my-4 text-center">Welcome to <span class="badge bg-secondary">The Times of India</span></h1>
         <div class="accordion" id="newsAcco"></div>
       </div>
