--- a/Main-JavaScript/web.html
+++ b/Main-JavaScript/web.html
@@ -4,10 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Document</title>
 </head>
 
 <body>
+
 
     <div class="container">
         <h1 class="heading text para" id="heading">Welcome to DOM</h1>
@@ -36,8 +39,21 @@
         <div class="no">This is dummy Div2</div>
         <div class="no">This is dummy Div3</div>
         <div class="no">This is dummy Div4</div>
+    </div>
+    <div class="container my-5">
         <h1>Students List</h1>
         <ul id="students"></ul>
+        <button id="myBtn" class="btn btn-primary">Fetch Data</button>
+        <button class="btn btn-primary">Get Data</button>
+        <div id="contnet">
+
+        </div>
+    </div>
+
+    <div class="container my-5 border border-black rounded-4 p-4 bg-secondary text-white">
+        <h1>Pull the results by clicking the button</h1>
+        <button id="getBtn" class="btn btn-warning border-white">Get Data</button>
+        <ol id="dfs" class="mt-4"></ol>
     </div>
     <!-- <script src="js/tut12.js"></script> -->
     <!-- <script src="js/tut14.js"></script> -->
@@ -66,7 +82,17 @@
     <!-- <script src="js/tut38.js"></script> -->
     <!-- <script src="js/tut39.js"></script> -->
     <!-- <script src="js/tut39b.js"></script> -->
-    <script src="js/tut40.js"></script>
+    <!-- <script src="js/tut40.js"></script> -->
+    <!-- <script src="js/tut41.js"></script> -->
+    <!-- <script src="js/tut42.js"></script> -->
+    <!-- <script src="js/tut43.js"></script> -->
+    <!-- <script src="js/tut44.js"></script> -->
+    <script src="js/tut45.js"></script>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
