--- a/Main-JavaScript/web.html
+++ b/Main-JavaScript/web.html
@@ -87,7 +87,11 @@
     <!-- <script src="js/tut42.js"></script> -->
     <!-- <script src="js/tut43.js"></script> -->
     <!-- <script src="js/tut44.js"></script> -->
-    <script src="js/tut45.js"></script>
+    <!-- <script src="js/tut45.js"></script> -->
+    <!-- <script src="js/tut46.js"></script> -->
+    <!-- <script src="js/tut47.js"></script> -->
+    <!-- <script src="js/tut48.js"></script> -->
+    <script src="js/tut49.js"></script>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
