--- a/Main-JavaScript/index.html
+++ b/Main-JavaScript/index.html
@@ -23,7 +23,7 @@
 <!-- <script src="js/tut8.js"></script> -->
 <!-- <script src="js/tut9.js"></script> -->
 <!-- <script src="js/tut10.js"></script> -->
-<script src="js/tut11.js"></script>
+<!-- <script src="js/tut11.js"></script> -->
 <!-- <script src="js/tut12.js"></script> -->
 
 
