--- a/Main-JavaScript/web.html
+++ b/Main-JavaScript/web.html
@@ -92,7 +92,12 @@
     <!-- <script src="js/tut47.js"></script> -->
     <!-- <script src="js/tut48.js"></script> -->
     <!-- <script src="js/tut49.js"></script> -->
-    <script src="js/tut51.js"></script>
+    <!-- <script src="js/tut51.js"></script> -->
+    <!-- <script src="js/tut52.js"></script> -->
+    <!-- <script src="js/tut53.js"></script> -->
+    <!-- <script src="js/tut54.js"></script> -->
+    <!-- <script src="js/tut55.js"></script> -->
+    <script src="js/tut56.js"></script>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
