--- a/Main-JavaScript/web.html
+++ b/Main-JavaScript/web.html
@@ -99,7 +99,9 @@
     <!-- <script src="js/tut55.js"></script> -->
     <!-- <script src="js/tut56.js"></script> -->
     <!-- <script src="js/tut57.js"></script> -->
-    <script src="js/tut58.js"></script>
+    <!-- <script src="js/tut58.js"></script> -->
+    <!-- <script src="js/tut59.js"></script> -->
+    <script src="js/tut60.js"></script>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
