--- a/Main-JavaScript/web.html
+++ b/Main-JavaScript/web.html
@@ -9,9 +9,8 @@
     <title>Document</title>
 </head>
 
-<body>
-
-
+<body onload="updateClock(); setInterval('updateClock()', 1000)">
+   
     <div class="container">
         <h1 class="heading text para" id="heading">Welcome to DOM</h1>
         <div class="child red good" id="myfirst">
@@ -55,6 +54,13 @@
         <button id="getBtn" class="btn btn-warning border-white">Get Data</button>
         <ol id="dfs" class="mt-4"></ol>
     </div>
+
+        <div class="text-center">
+            <h1 id="clock"></h1>
+        </div>
+
+
+  
     <!-- <script src="js/tut12.js"></script> -->
     <!-- <script src="js/tut14.js"></script> -->
     <!-- <script src="js/tut15.js"></script> -->
@@ -101,7 +107,10 @@
     <!-- <script src="js/tut57.js"></script> -->
     <!-- <script src="js/tut58.js"></script> -->
     <!-- <script src="js/tut59.js"></script> -->
-    <script src="js/tut60.js"></script>
+    <!-- <script src="js/tut60.js"></script> -->
+    <!-- <script src="js/tut61.js"></script> -->
+    <!-- <script src="js/tut62.js"></script> -->
+    <script src="js/tut63.js"></script>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
