--- a/Project8/index.html
+++ b/Project8/index.html
@@ -4,16 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Drag & Drop || JavaScript</title>
+    <title>Calculator -  JavaScript</title>
 </head>
 <body>
     
-    <div class="whiteBox">
-        <div class="imgBox" draggable="true"></div>
-    </div>
-    <div class="whiteBox"></div>
-    <div class="whiteBox"></div>
-    <div class="whiteBox"></div>
+    <h1>Calculator</h1>
 
     <script src="index.js"></script>
 </body>
